src/test/deca/syntax/invalid/created/operande_manquante/and__a.deca
// Description :
//    test and pour une opérande manquante
//
// Resultats :
//		Erreur syntaxique
//    	Ligne 11: operante manquante

{
c =  && a;
}
